--- a/home/templates/navbar.html
+++ b/home/templates/navbar.html
@@ -2,20 +2,21 @@
 
 {% block header %}
 
+    <!--
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'index' %}"><i class="bi bi-flower2 text-success"></i>&nbsp; Driving
+            <a class="navbar-brand" href="#"><i class="bi bi-flower2 text-success"></i>&nbsp; Driving
                 School</a>
             <form class="d-flex">
                 <input hidden class="form-control me-2 .d-none" type="search" placeholder="Search" aria-label="Search">
                 <button hidden class="btn btn-secondary me-2"><i class="bi bi-search"></i></button>
 
                 {% if user.cart %}
-                    <a href="{% url 'cart' %}" class="btn btn-primary me-2"><i class="bi bi-cart3"></i></a>
+                    <a href="#" class="btn btn-primary me-2"><i class="bi bi-cart3"></i></a>
                 {% endif %}
 
                 {% if user.is_authenticated %}
-                    <a href="{% url 'show-favorite' %}" class="btn btn-danger me-2"><i
+                    <a href="#" class="btn btn-danger me-2"><i
                             class="bi bi-suit-heart-fill"></i></a>
 
                     <div class="dropdown">
@@ -40,5 +41,5 @@
             </form>
         </div>
     </nav>
-
+    -->
 {% endblock %}
