--- a/home/templates/navbar.html
+++ b/home/templates/navbar.html
@@ -1,22 +1,15 @@
-{% extends 'layout.html' %}
-
 {% block header %}
-
-    <!--
+<header>
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><i class="bi bi-flower2 text-success"></i>&nbsp; Driving
-                School</a>
+            <a class="navbar-brand" href=""><i class="bi bi-flower2 text-success"></i>&nbsp;The Plant's
+                Market</a>
             <form class="d-flex">
                 <input hidden class="form-control me-2 .d-none" type="search" placeholder="Search" aria-label="Search">
                 <button hidden class="btn btn-secondary me-2"><i class="bi bi-search"></i></button>
 
-                {% if user.cart %}
-                    <a href="#" class="btn btn-primary me-2"><i class="bi bi-cart3"></i></a>
-                {% endif %}
-
                 {% if user.is_authenticated %}
-                    <a href="#" class="btn btn-danger me-2"><i
+                    <a href="" class="btn btn-danger me-2"><i
                             class="bi bi-suit-heart-fill"></i></a>
 
                     <div class="dropdown">
@@ -26,20 +19,20 @@
                         </button>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                             {% if user.is_staff %}
-                                <a class="dropdown-item" href="{% url 'admin:index' %}">Admin</a>
+                                <a class="dropdown-item" href="">Admin</a>
                             {% endif %}
-                            <a class="dropdown-item" href="{% url 'my_account:addresses' %}">Address</a>
-                            <a class="dropdown-item" href="{% url 'my_account:orders' %}">Orders</a>
-                            <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+                            <a class="dropdown-item" href="">Address</a>
+                            <a class="dropdown-item" href="">Orders</a>
+                            <a class="dropdown-item" href="">Logout</a>
                         </div>
                     </div>
 
                 {% else %}
-                    <a href="{% url 'login' %}" class="btn btn-success">Login</a>
+                    <a href="" class="btn btn-success">Login</a>
                 {% endif %}
 
             </form>
         </div>
     </nav>
-    -->
+</header>
 {% endblock %}
