--- a/home/templates/home/register.html
+++ b/home/templates/home/register.html
@@ -2,5 +2,30 @@
 
 {% block content %}
 
+<div class="">
+    <h3 class="text-center"> Register </h3>
+
+    <form method="post">
+
+        {% csrf_token %}
+
+        {% if form.errors %}
+            {% for field in form %}
+                {{ field.label_tag }}{{ field }}
+                    {% for error in field.errors %}
+                        <p> {{ error }}</p>
+                    {% endfor %}
+            {% endfor %}
+        {% endif %}
+
+        <br>
+
+        <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+
+
+
+
+</div>
 
 {% endblock %}
