--- a/home/templates/layout.html
+++ b/home/templates/layout.html
@@ -35,7 +35,7 @@
                     {% if user.is_authenticated %}
                         <a href="" class="btn btn-danger btn-sm">Logout</a>
                     {% else %}
-                        <a href="" class="btn btn-primary btn-sm">Login</a>
+                        <a href="{% url 'home:login' %}" class="btn btn-success">Login</a>
                     {% endif %}
     
                 </form>
