--- a/home/templates/layout.html
+++ b/home/templates/layout.html
@@ -33,7 +33,8 @@
                     <button hidden class="btn btn-secondary me-2"><i class="bi bi-search"></i></button>
     
                     {% if user.is_authenticated %}
-                        <a href="" class="btn btn-danger btn-sm">Logout</a>
+                        <a href="{% url 'home:account' %}" class="btn btn-success btn-sm">Account</a>
+                        <a href="{% url 'home:logout' %}" class="btn btn-danger btn-sm">Logout</a>
                     {% else %}
                         <a href="{% url 'home:login' %}" class="btn btn-success">Login</a>
                     {% endif %}
