--- a/home/templates/home/register.html
+++ b/home/templates/home/register.html
@@ -1,28 +1,34 @@
 {% extends 'layout.html' %}
+{% load static %}
 
 {% block content %}
 
-<div class="">
+<div class="container">
+    <main class="form-signin w-100 m-auto">
+        <form class="text-center" method="POST">
+            {% csrf_token %}
+            <h1 class="h3 mb-3 fw-normal">Please Sign-Up</h1>
+            <p>Already have an account  ? <a href="{% url 'home:login' %}">Login</a></p>
 
-    <div class="container">
-    <h3 class="text-center"> Register </h3>
-
-    <form method="post">
-
-        {% csrf_token %}
             {% for field in form %}
-                {{ field.label_tag }}{{ field }}
-                    {% if form.errors %}
-                        {% for error in field.errors %}
-                            <p> {{ error }}</p>
-                        {% endfor %}
-                    {% endif %}
+                {% if form.errors %}
+                    {% for error in field.errors %}
+                        <strong style="color: red">{{ error }}strong>
+                    {% endfor %}
+                {% endif %}
+            <div class="form-floating">
+                {{ field }}
+                {{ field.label_tag }}
+            </div>
             {% endfor %}
         <br>
-
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign Up</button>
     </form>
-    </div>
-</div>
+</main>
 
+</div>
 {% endblock %}
+
+
+
+
