--- a/home/templates/layout.html
+++ b/home/templates/layout.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <!-- CSS CUSTOM -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/sign-in.css' %}">
     <!-- CSS GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +28,7 @@
     <header>
         <nav class="navbar navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href=""><i class="bi bi-car-front-fill text-white-green"></i>&nbsp;Driving School</a>
+                <a class="navbar-brand" href="{% url 'home:index' %}"><i class="bi bi-car-front-fill text-white-green"></i>&nbsp;Driving School</a>
                 <form class="d-flex">
                     <input hidden class="form-control me-2 .d-none" type="search" placeholder="Search" aria-label="Search">
                     <button hidden class="btn btn-secondary me-2"><i class="bi bi-search"></i></button>
