Feature : Login Form, views, template

--- a/home/templates/registration/login.html
+++ b/home/templates/registration/login.html
@@ -8,7 +8,14 @@
     <div class="container py-5">
       <form method="POST">
         {% csrf_token %}
-        {{ form }}
+        {% for field in form %}
+            {{ field.label_tag }}{{ field }}
+                {% if form.errors %}
+                    {% for error in field.errors %}
+                        <p> {{ error }}</p>
+                    {% endfor %}
+                {% endif %}
+        {% endfor %}
         <button class="btn btn-primary" type="submit">Login</button>
       </form>
       <a href="{% url 'home:signup' %}"><p class="text-center"> Go to the register page </p></a>
