--- a/home/templates/home/school_list.html
+++ b/home/templates/home/school_list.html
@@ -1,13 +1,34 @@
 {% extends 'layout.html' %}
-
 {% block content %}
 
     <div class="container">
-        <h1> All the driving schools</h1>
-
-        {% for school in schools %}
-            <p> {{ school.name }}</p>
-        {% endfor %}
+        <div class="row">
+            <div class="col-12">
+                <div class="row">
+                    <div id="faq-section-title" class="text-center py-4">
+                        <h2 class="fs-1 fw-bold text-dark">All our driving
+                          <span class="text-white-blue">schools</span>
+                        </h2>
+                        <h6 class="lh-base w-75 mx-auto">Here are all the driving schools registered on our site :</h6>
+                        <div style="width: 60px;" class="mx-auto border border-secondary"></div>
+                      </div>
+                    {% for school in schools %}
+                        <div class="col-12 col-md-4">
+                            <div class="card mt-4 shadow-sm">
+                                <a href="">
+                                    <img src="{{ school.picture_url }}" alt="{{ school.name }}" class="card-img-top img-school" height="180">
+                                </a>
+                                <div class="card-body">
+                                        <h5 class="card-title">{{ school.name }}</h5>
+                                    </a>
+                                    <p class="card-text">{{ school.description }}</p>
+                                </div>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
     </div>
 
 {% endblock %}
