Feature : Details view for school

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -45,6 +45,7 @@
                     </div>
                 </div>
             </div>
+            <a href="{% url 'home:school-reservations' school.id %}" class="btn btn-white-green btn-sm"> Check available slots</a>
         </div>
         {% endfor %}
     </div>
