--- a/home/templates/home/school_slots.html
+++ b/home/templates/home/school_slots.html
@@ -18,13 +18,13 @@
                             <h3 class="card-title"> {{ event.name }}</h3>
                             <p class="card-text"></p>
                         </div>
-                        <a href="{% url 'home:edit-event' school.id event.id%}" class="btn btn-info"> Edit this event</a>
-                        <a href="{% url 'home:delete-event' event.id%}" class="btn btn-danger"> Delete this event</a>
+                        <a href="{% url 'home:pick-slot' school.id %}" class="btn btn-info">
+                            Register for this event
+                        </a>
                     </div>
                 {% endfor %}
             {% else %}
-                <p> You don't have events planned</p>
-                <a href="{% url 'home:add-event' school.pk %}"> Create a new event </a>
+                <p> This school doesn't have any events yet.</p>
             {% endif %}
 
         </div>
