--- a/home/templates/home/school_list.html
+++ b/home/templates/home/school_list.html
@@ -9,9 +9,9 @@
                         <h2 class="fs-1 fw-bold text-dark">All our driving
                           <span class="text-white-blue">schools</span>
                         </h2>
-                        <h6 class="lh-base w-75 mx-auto">Here are all the driving schools registered on our site :</h6>
+                        <h6 class="lh-base w-75 mx-auto">Here are all the driving schools registered on our site</h6>
                         <div style="width: 60px;" class="mx-auto border border-secondary"></div>
-                      </div>
+                    </div>
                     {% for school in schools %}
                         <div class="col-12 col-md-4">
                             <div class="card mt-4 shadow-sm">
