--- a/home/templates/school/school_add_event.html
+++ b/home/templates/school/school_add_event.html
@@ -1,24 +1,36 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-
     <div class="container">
-    <h3 class="text-center"> New event form </h3>
+        <div class="text-center py-4">
+            <h2 class="fs-2 fw-bold text-dark">Create your School
+              <span class="text-white-blue">Event</span>
+            </h2>
+            <h6 class="lh-base w-75 mx-auto">Here you can create an event for your driving school</h6>
+            <div style="width: 60px;" class="mx-auto border border-secondary"></div>
+        </div>
     <form method="post">
     {% csrf_token %}
     {% for field in form %}
         {% if form.errors %}
             {% for error in field.errors %}
-                <strong style="color: red">{{ error }}<strong>
+            <div align="center">
+                <a style="color: red">{{ error }}<a>
+            </div>
             {% endfor %}
         {% endif %}
-        <div class="form-floating">
+        <div align="center">
+            <div class="col-6 form-floating">
             {{ field }}
             {{ field.label_tag }}
+            </div>
         </div>
     {% endfor %}
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Create this new event</button>
+    <div align="center">
+        <div class="col-6">
+            <button class="w-100 btn btn-lg btn-white-blue" type="submit">Create this new event</button>
+        </div>
+    </div>
     </form>
     </div>
-
 {% endblock %}
